# DeviceManagement

./: .arcconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
dev-support/: test-patch.sh
frontend/: device.xlsx  deviceIndex.html  devicelist.html  devicelistfull.html  index.html
frontend/middleware/: index.css  login-floating-labels.css  taidu_common.js  taidu_smartcommunity.js
golang/: CMakeLists.txt  device.xlsx  go.mod  go.sum
golang/cmd/lcyutils/: main.go
golang/lcyutils/: swagger.yaml
golang/lcyutils/models/: api_response.go  device_info.go  device_list_info.go  device_list_info_full.go
golang/lcyutils/restapi/: configure_lcyutils.go  doc.go  embedded_spec.go  server.go
golang/lcyutils/restapi/operations/: lcyutils_api.go
golang/lcyutils/restapi/operations/qq/: post_send_private_msg.go  post_send_private_msg_parameters.go  post_send_private_msg_responses.go  post_send_private_msg_urlbuilder.go
golang/lcyutils/restapi/operations/shebei/: get_get_device.go  get_get_device_list.go  get_get_device_list_full.go  (+17 more)
golang/lcyutils/server/: common_message.go  gongwei.go  mysql.go  server.go
golang/pkg/fisco-go-sdk/: .arcconfig
golang/pkg/fisco-go-sdk/client/: go_client.go
golang/pkg/fisco-go-sdk/conf/: config.go
golang/pkg/titanium-crud/: condition.go  crud.go  crud_service.go  entry.go  table_factory.go
golang/pkg/titanium-sols/tablesize/: Condition.abi  TableSize.abi  TableSize.go  TableSize.sol
golang/pkg/titanium-utils/: define_constant.go  define_struct.go  message.go  sols_session.go  tools.go  type_convert.go
(+3 files in other folders)
